# topaz

./: .gitignore  BUILD.gn  OWNERS  README.md
app/term/: BUILD.gn  app.cc  app.h  main.cc  pty_client.cc  pty_client.h  pty_server.cc  term.fidl  term_model.cc  view_controller.cc  view_controller.h
app/term/meta/: term.cmx
auth_providers/google/: BUILD.gn  constants.h  factory_impl.cc  factory_impl.h  factory_impl_unittest.cc  google_auth_provider_impl.cc  google_auth_provider_impl.h  google_auth_provider_impl_unittest.cc  main.cc
auth_providers/google/meta/: google_auth_provider.cmx
bundles/: BUILD.gn
public/dart/composition_delegate/: BUILD.gn  OWNERS
public/dart/composition_delegate/lib/: composition_delegate.dart
public/dart/composition_delegate/test/: encode_decode_test.dart  layout_test.dart
public/dart/fuchsia_inspect/: .packages  BUILD.gn  README.md  foo
public/dart/fuchsia_inspect/codelab/: BUILD.gn
public/dart/fuchsia_inspect/codelab/client/: BUILD.gn
public/dart/fuchsia_inspect/lib/: inspect.dart
public/dart/fuchsia_inspect/test/: bitfield64_test.dart  block_test.dart  heap_test.dart  inspect_test.dart  node_test.dart  util.dart  vmo_fields_test.dart  vmo_writer_test.dart
public/dart/fuchsia_inspect_flutter/: BUILD.gn  README.md  pubspec.yaml
public/dart/fuchsia_inspect_flutter/lib/: WidgetTreeTraversal.dart
public/dart/fuchsia_inspect_flutter/meta/: fuchsia_flutter_test.cmx
public/dart/fuchsia_inspect_flutter/test/: fuchsia_flutter_test.dart  inspect_flutter_test.dart
public/dart/fuchsia_internationalization_flutter/: BUILD.gn  analysis_options.yaml  pubspec.yaml
public/dart/fuchsia_internationalization_flutter/test/: profile_provider_test.dart
public/dart/fuchsia_scenic_flutter/: BUILD.gn
public/dart/fuchsia_services/: BUILD.gn
public/dart/fuchsia_services/lib/: services.dart
public/dart/fuchsia_services/meta/: fuchsia_services_package_integration_tests.cmx
public/dart/fuchsia_services/test/: environment_service_connection_test.dart  incoming_test.dart  launch_flow_test.dart  outgoing_test.dart
public/dart/fuchsia_webview_flutter/: BUILD.gn
public/dart/fuchsia_webview_flutter/fuchsia_test/: fuchsia_webview_target_tests.dart
public/dart/fuchsia_webview_flutter/meta/: fuchsia_webview_flutter_target_tests.cmx
public/dart/fuchsia_webview_flutter/test/: fuchsia_webview_test.dart
public/lib/webview/: BUILD.gn
public/sdk/: BUILD.gn  fuchsia_dart.api
runtime/chromium/: BUILD.gn
runtime/dart/: BUILD.gn  compiler.dart  dart_component.gni  dart_fuchsia_test.gni  dart_kernel.gni  dart_test.gni  flutter_test.gni  gen_flutter_test_invocation.py  gen_fuchsia_test_main.py
runtime/dart/meta/: dart.cmx
runtime/dart/profiler_symbols/: BUILD.gn  dart_profiler_symbols.dart
runtime/dart/utils/: BUILD.gn  handle_exception.cc  handle_exception.h  logging.h  tempfs.cc  vmo.cc  vmo.h  vmservice_object.cc  vmservice_object.h
runtime/dart_runner/: BUILD.gn  builtin_libraries.cc  dart_app.gni  dart_component_controller.cc  dart_component_controller.h  dart_runner.cc  dart_runner.h  main.cc  mapped_resource.cc  service_isolate.cc
runtime/dart_runner/embedder/: BUILD.gn  builtin.dart
runtime/dart_runner/examples/goodbye_dart/: BUILD.gn
runtime/dart_runner/examples/hello_app_dart/: main.dart
runtime/dart_runner/integration/: BUILD.gn  main.dart
runtime/dart_runner/integration/meta/: dart_aot_runner_test.cmx  dart_jit_runner_test.cmx
runtime/dart_runner/kernel/: BUILD.gn  libraries.json  libraries.yaml
runtime/dart_runner/meta/: dart_aot_product_runner.cmx  dart_aot_runner.cmx  dart_jit_product_runner.cmx  dart_jit_runner.cmx
runtime/flutter_runner/: BUILD.gn  accessibility_bridge.cc  accessibility_bridge.h  accessibility_bridge_fakes.cc  accessibility_bridge_fakes.h  accessibility_bridge_unittest.cc  collect_traces.dart  compilation_trace.README  compilation_trace.txt  component.cc  component.h  compositor_context.cc  compositor_context.h  context_writer_bridge.cc  engine.cc  engine.h  flutter_app.gni  flutter_runner_fakes.h  fuchsia_accessibility.cc  fuchsia_accessibility.h  fuchsia_accessibility_unittest.cc  fuchsia_font_manager.cc  fuchsia_font_manager_unittest.cc  isolate_configurator.cc  isolate_configurator.h  logging.h  loop.cc  loop.h  main.cc  merge_traces.dart  platform_view.cc  platform_view.h  platform_view_unittest.cc  runner.cc  runner.h  semantics_bridge.cc  semantics_bridge.h  service_provider_dir.cc  service_provider_dir.h  session_connection.cc  (+13 more)
runtime/flutter_runner/kernel/: BUILD.gn  extract_far.dart  libraries.json  libraries.yaml
runtime/flutter_runner/meta/: flutter_aot_product_runner.cmx  flutter_jit_product_runner.cmx  flutter_jit_runner.cmx  flutter_runner_tests.cmx
runtime/sky_engine/: BUILD.gn  copy_sky_engine_sources.py
shell/ermine/: BUILD.gn
shell/ermine/config/: basemgr.config  modular_config.json
shell/ermine/lib/: main.dart
shell/ermine/meta/: ermine.cmx
shell/ermine/test/: run-e2e-ermine
shell/ermine/test/end_to_end/: BUILD.gn  README.md  analysis_options.yaml
shell/mondrian_story_shell/: BUILD.gn
shell/mondrian_story_shell/lib/: main.dart  story_shell_impl.dart
shell/mondrian_story_shell/lib/layout/: container_layout.dart  copresent_layout.dart  pattern_layout.dart
shell/mondrian_story_shell/lib/widgets/: mondrian.dart  mondrian_child_view.dart  overview.dart  surface_director.dart  surface_relationships.dart  surface_stage.dart
shell/mondrian_story_shell/meta/: mondrian.cmx
shell/mondrian_story_shell/test/layout/: pattern_layout_test.dart  surface_relationship_test.dart
tests/benchmarks/: BUILD.gn  benchmarks.cc  gfx_benchmarks.cc  topaz_gfx_benchmarks.sh
tests/benchmarks/dart_inspect/: BUILD.gn  README.md  basic_benchmarks.tspec
tests/benchmarks/dart_inspect/lib/: dart_inspect_benchmarks.dart
tests/benchmarks/input_latency/: BUILD.gn  run_button_flutter_benchmark.cmx  run_button_flutter_benchmark.sh
tests/modular_integration_tests/: BUILD.gn  README.md  run_topaz_modular_integration_tests.sh  topaz_modular_integration_tests.json
(+615 files in other folders)
