# Copyright 2019 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

group("buildbot") {
  testonly = true
  public_deps = [
    "//src/modular/bundles:framework_experimental",
    "//src/modular/bundles:integration_testing",
    "//src/modular/bundles:tools",
    "//topaz",
    "//topaz/public/sdk",
  ]
}
