# Copyright 2019 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

group("buildbot") {
  testonly = true
  public_deps = [
    "//src/modular/bundles:framework",
    "//src/modular/bundles:integration_testing",
    "//src/modular/bundles:tools",
    "//topaz",
    "//topaz/public/sdk",
    # TODO: the following targets are dependencies of the perf-test
    # pipeline, but are not explicitly managed by any related perf-test
    # targets or CQ pipelines or dependencies of those tests.
    "//garnet/bin/catapult_converter",
    "//garnet/packages/prod:scenic",
    "//src/fonts",
  ]
}
