# Copyright 2018 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/packages/prebuilt_package.gni")

prebuilt_package("chromium") {
  archive = "//topaz/third_party/chromium/arch/$target_cpu/chromium.far"
}

prebuilt_package("web_runner") {
  archive = "//topaz/third_party/chromium/arch/$target_cpu/web_runner.far"
}
