# Copyright 2016 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//topaz/runtime/dart/flutter_test.gni")

# TODO(joshuaseaton): Replace this with a template that defines a dart test
# without flutter dependencies.
template("dart_test") {
  flutter_test(target_name) {
    forward_variables_from(invoker, "*")
  }
}
