# Copyright 2016 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

assert(is_fuchsia)

import("//build/packages/prebuilt_package.gni")

prebuilt_package("dart_jit_runner") {
  archive = "//prebuilt/third_party/flutter/$target_cpu/debug/jit/dart_jit_runner-0.far"
}

prebuilt_package("dart_jit_product_runner") {
  archive = "//prebuilt/third_party/flutter/$target_cpu/release/jit/dart_jit_product_runner-0.far"
}

prebuilt_package("dart_aot_runner") {
  archive = "//prebuilt/third_party/flutter/$target_cpu/profile/aot/dart_aot_runner-0.far"
}

prebuilt_package("dart_aot_product_runner") {
  archive = "//prebuilt/third_party/flutter/$target_cpu/release/aot/dart_aot_product_runner-0.far"
}
