# Copyright 2018 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

group("ermine") {
  testonly = true
  public_deps = [
    "//src/experiences/session_shells/ermine"
  ]
}

group("ermine_ask_module") {
  testonly = true 
  public_deps = [
    "//src/experiences/session_shells/ermine:ermine_ask_module",
  ]
}

group("ermine_modular_config") {
  testonly = true 
  public_deps = [
    "//src/experiences/session_shells/ermine:ermine_modular_config",
  ]
}

group("ermine_fonts") {
  testonly = true 
  public_deps = [
    "//src/experiences/session_shells/ermine:ermine_fonts",
  ]
}
