# Copyright 2018 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.



group("mondrian") {
  testonly = true
  public_deps = [
    "//src/experiences/story_shells/mondrian",
  ]
}

group("mondrian_story_shell_tests") {
  testonly = true
  public_deps = [
    "//src/experiences/story_shells/mondrian:mondrian_story_shell_tests($host_toolchain)",
  ]
}
